I added two other pages

--- a/style.css
+++ b/style.css
@@ -51,3 +51,16 @@ li{
 .value{
     font-size: 3rem;
 }
+.luxury{
+    background-color: #232323;
+    color: #fff;
+}
+.col{
+    background-color: #000 !important;
+}
+.inside{
+    background-color: b;
+}
+.mission{
+    background-color:  #000 !important;
+}
