--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ main{
     margin-left: 51rem;
 }
 .sec1{
-    background-image: url(./img/download.jfif);
-    background-color: rgb(56, 51, 51);
+    background-image: url(https://media.hotels.ng/img/h21586/562/422/b1/villa-view-hotels-ltd-21586-13.jpg);
+    background-color: rgb(104, 103, 103);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-size: cover;
