--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@
         .bar{
             margin-left: rem;
         }
+        .villa{
+            font-size: 0.8rem !important;
+        }
 
 }
 
@@ -168,4 +171,7 @@ li{
     border:1px solid #000;
     padding: 15px;
     border-radius: 7px;
+}
+.villa{
+    font-size: 1.2rem;
 }
