--- a/style.css
+++ b/style.css
@@ -160,6 +160,10 @@ li{
     font-weight: bold;
     font-size: 1.1rem;
 }
+.exclusive{
+    font-weight: bold;
+    font-size: 1rem;
+}
 .frequent{
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
@@ -174,4 +178,8 @@ li{
 }
 .villa{
     font-size: 1.2rem;
+}
+.ask{
+    border: 1px solid #000;
+    padding: 20px;
 }
